--- a/resume/templates/resume.html
+++ b/resume/templates/resume.html
@@ -143,16 +143,16 @@
       <h5 title = 'primary email' style="text-align: right;">lorenzom.mercado@gmail.com</h5>
       <h5 title = 'college email' style="text-align: right;">mercal@rpi.edu</h5>
       <h5 title = 'phone number' style="text-align: right;">413-234-9872</h5>
-      <a title = 'LinkedIn' href="linkedin.com/in/lorenzommercado">
+      <a title = 'LinkedIn' href="https://linkedin.com/in/lorenzommercado">
         <h5 title = 'LinkedIn' style="text-align: right;">linkedin.com/in/lorenzommercado</h5>
       </a>
-      <a title = 'GitHub' href="github.com/LorenzoMercado">
+      <a title = 'GitHub' href="https://github.com/LorenzoMercado">
         <h5 title = 'GitHub' style="text-align: right;">github.com/LorenzoMercado</h5>
       </a>
 
     </div>
     <div class="tab-pane fade" id="projects">
-      <a href="github.com/LorenzoMercado" style="position: absolute; right:30px;">
+      <a href="https://github.com/LorenzoMercado" style="position: absolute; right:30px;">
         <h1>GitHub</h1>
       </a>
 
@@ -222,7 +222,7 @@
 
     </div>
     <div class="tab-pane fade" id="skills">
-      <h1 style="font-size: 100px;">SKILLS/ACTIVITIES</h1>
+      <h1 style="font-size: 100px;">Skills/Activities</h1>
       <br>
 
       <h2>Technical</h2>
